--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/axiom-std"]
+	path = lib/axiom-std
+	url = https://github.com/axiom-crypto/axiom-std
