--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,16 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.19"
+optimizer_runs = 1000
+optimiser = true
+fs_permissions = [{ access = "read-write", path = "./" }]
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+local = "${RPC_URL_LOCAL}"
+sepolia = "${RPC_URL_SEPOLIA}"
+mainnet = "${RPC_URL_MAINNET}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
