updated config and node version

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 MNEMONIC_LOCAL="test test test test test test test test test test test junk"
 MNEMONIC_SEPOLIA=
 MNEMONIC_MAINNET=
+PRIVATE_KEY_LOCAL=
+PRIVATE_KEY_SEPOLIA=
+PRIVATE_KEY_MAINNET=
 SENDER_LOCAL=
 SENDER_TESTNET=
 SENDER_MAINNET=
