--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "author": "Machina Labs",
     "license": "MIT",
     "dependencies": {
-        "@axiom-crypto/client": "2.0.6",
-        "dotenv": "^16.3.1",
-        "ethers": "^6.10.0"
+        "@axiom-crypto/client": "2.0.7",
+        "dotenv": "^16.3.1"
     },
     "devDependencies": {
         "tsx": "^4.7.0",
