--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["node_modules", "lib"]
+libs = ["lib"]
 solc = "0.8.19"
 optimizer_runs = 1000
 optimiser = true
